# polymorph

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  test.py  triangle_test.py
.cargo/: config.toml
.github/workflows/: ci.yml  draw-api.yml  fidget.yml  python.yml  sketch.yml  ui-check.yml  ui.yml
.zed/: settings.json
avi/tiny/: Makefile  tiny.cc
crates/buoyancy/: Cargo.toml  README.md
crates/buoyancy/src/: lib.rs
crates/gpu_interp/: .envrc  .gitignore  Cargo.toml  Overview.md  build.rs  index.html  opcodes.json  readme.md
crates/gpu_interp/src/: lib.rs  main.rs  sdf.rs  shader-in.wgsl  shader.wgsl
crates/gpu_interp/src/web/: fragment_main_web.wgsl  main.js  main.rs  style.sass
crates/gpu_interp/tests/: tests.rs
crates/iceberg/: Cargo.toml
crates/iceberg/src/: app.rs  lib.rs  main.rs
kevin/: Cargo.toml  readme.md
kevin/src/: lib.rs
notebooks/: .gitignore  .polyscope.ini  2024_06_25_optimizing_centered_parameters.ipynb  2024_09_2d_fitting.ipynb  2024_10_2d_fitting.ipynb  2024_10_polymorph_sketch_not_minimizing.ipynb  2024_10_rust_jupyter_test.ipynb  First-grad.ipynb  SDF-experiements-path-creation.ipynb  SDF-experiements.ipynb  Winding-number.ipynb  angle-minimization-bug.ipynb  boat_shape_optimization.ipynb  building-polygons-for-sdfs.ipynb  extruded-3d-solids.ipynb  failed-jax-eval.ipynb  full_boat_example.ipynb  imgui.ini  jax-jit.ipynb  node_optimizations.ipynb  optimistix jit experiments.ipynb  plain-pytrees.ipynb  plotly_examples.ipynb  polygon-with-winding-number.ipynb  pure-jax-pytree-impl-with-register.ipynb  pure-jax-pytree-impl.ipynb  s2df constraint optimization.ipynb  s2df optimization.ipynb  s2df playground.ipynb  sdf-biarcs.ipynb
pat/: Cargo.toml  pyimgui-sdl2.py  sdl-image.py
pat/sirkul/src/: main.rs
pat/wgpu_fun/: Cargo.toml
patches/: threejs-math+0.147.0.patch
pdubroy/: Cargo.toml
pdubroy/sirkul/: Cargo.toml
pdubroy/sirkul/src/: gui.rs  main.rs
polymorph-app/: README.md  pyproject.toml
polymorph-app/src/polymorph_app/: __main__.py  graph.py  icons.py  scenes.py  sdf.py  sketch.py  solve.py  tools.py  types.py  util.py
polymorph-num/: README.md  float_eval.py  jax_eval.py  loss.py  node.py  ops.py  optimizer.py  params.py  point.py  pyproject.toml  test.py
polymorph-num/src/: profile_unit.py  test.py
polymorph-num/src/polymorph_num/: angle.py  distance.py  eval.py  expr.py  loss.py  node.py  ops.py  optimizer.py  point.py  test.py  trace.py  types.py  unit.py  vec.py  vec3.py
polymorph-s2df/: README.md  pyproject.toml  test.py
polymorph-s2df/src/polymorph_s2df/: __init__.py  bounding_box.py  devutils.py  embed.py  geom_helpers.py  geometric_properties.py  numpy_eval.py  operations.py  paths.py  plane.py  segments.py  shapes.py  solid_operations.py  solids.py  turtle.py  utils.py
polymorph-sketch/: .gitignore  README.md  pyproject.toml
polymorph-sketch/src/: __main__.py  sketch.py  types.py
polymorph-sketch/src/polymorph_sketch/: draw_api.py  eval.py  memoizer.py  nodes.py
script/: build-studio-lite.sh  check_all.sh  equilibrium_viz.py  equilibrium_viz3d.py
script/git-hooks/: pre-commit
steve/play-with-ad/: Cargo.toml
steve/play-with-ad/src/: autodiff_lib.rs  main.rs
steve/rusted-toy-project/: Cargo.toml
steve/rusted-toy-project/src/: main.rs
steve/toy-project/: gaussLegendreIntegration.js  geomIntegrations.js  index.js  mcmc.js  package-lock.json  package.json  utils.js  vectorOperations.js
typings/imgui/: __init__.pyi
