[workspace]

resolver = "2"
members = ["crates/*", "packages/fidget/"]
exclude = ["pat/"]

# Profile stuff from https://github.com/emilk/eframe_template
# but it has to live in the root Cargo.toml.
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
# End of profile stuff from eframe_template

# WASM-specific settings
[profile.release.package."*".target.'cfg(target_arch = "wasm32")']
opt-level = "s" # Optimize for small code size.

[workspace.dependencies]
fidget = { git = "https://github.com/mkeeter/fidget", branch = "wgpu-bytecode", features = [ "rhai" ] }
