[project]
name = "polymorph"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "matplotlib>=3.8.4",
    "ruff>=0.4.4",
    "jupyter>=1.0.0",
    "jax>=0.4.28",
    "numpy>=1.26.4",
    "jaxlib>=0.4.28",
    "optax>=0.2.2"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["script"]
