[project]
name = "polymorph"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Avi Bryant", email = "avi@avibryant.com" },
    { name = "Kevin J. Lynagh", email = "kevin@keminglabs.com" },
    { name = "Patrick Dubroy", email = "pdubroy@gmail.com" },
    { name = "Steve Genoud", email = "steve@sgenoud.com" },
]
dependencies = [
    "matplotlib>=3.8.4",
    "ruff>=0.4.4",
    "jupyter>=1.0.0",
    #    "jax>=0.4.28;sys_platform=='darwin'",
    #    "jax[cuda]>=0.4.28;sys_platform=='linux'",
    "jax>=0.4.28",
    "numpy>=1.26.4",
    "jaxlib>=0.4.28",
    "optax>=0.2.3",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    "imgui>=2.0.0",
    "moderngl>=5.10.0",
    "glfw>=2.7.0",
    "pyopengl>=3.1.7",
    "pre-commit>=3.7.1",
    "jaxtyping>=0.2.31",
    "pyright>=1.1.372",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtural = true
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-benchmark"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["script"]

[tool.rye.workspace]
members = ["polymorph-*"]

[tool.rye.scripts]
polymorph = "python -m polymorph_app"

[tool.ruff.lint]
ignore = ["E741", "E501"]

# From https://docs.astral.sh/ruff/linter/#rule-selection: "a configuration
# that enables some of the most popular rules (without being too pedantic)"
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

exclude = ["typings/imgui/__init__.pyi"]

[tool.pyright]
venvPath = "."
venv = ".venv"
