[project]
name = "polymorph-s2df"
version = "0.1.0"
description = "Add your description here"
dependencies = ["jax>=0.4.28"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/polymorph_s2df"]
