[package]
name = "gpu_interp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.18.0"
env_logger = "0.11.5"
flume = "0.11.0"
pollster = "0.3.0"
wgpu = "22.1.0"

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
fidget = "0.3.3"
