[package]
name = "gpu_interp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.18.0"
env_logger = "0.11.5"
fidget = "0.3.3"
flume = "0.11.0"
pollster = "0.3.0"
wgpu = "22.1.0"
bincode = "1.3.3"
winit = "0.29"

# Web deps
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[[bin]]
name = "web"
path = "src/web/main.rs"