[package]
name = "gpu_interp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.18.0"
env_logger = "0.11.5"
fidget = { git = "https://github.com/mkeeter/fidget", branch = "wgpu-bytecode" }
flume = "0.11.0"
pollster = "0.3.0"
wgpu = "22.1.0"
bincode = "1.3.3"
winit = "0.29"
log = "0.4.22"

# Web deps
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.45", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1.0.0", features = ["wasm-bindgen"], optional = true }

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
approx = "0.5.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[features]
web = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:console_log"
]

[[bin]]
name = "web"
path = "src/web/main.rs"
required-features = ["web"]
