[package]
name = "sirkul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = { git = "https://github.com/parasyte/pixels", rev = "befb84a" }
winit = "0.28"
winit_input_helper = "0.14"
rand = "0.8"
kurbo = "0.11.0"
cobyla = "0.6.0"
